
# preserve header timestamps to preserve incremental builds across
# projects
nobase_includeHEADERS_INSTALL = $(INSTALL) -D -p -c -m 644

nobase_include_HEADERS = \
    OSS/UTL/Semaphore.h \
    OSS/UTL/StackTrace.h \
    OSS/UTL/DynamicHashTable.h \
    OSS/UTL/Compress.h \
    OSS/UTL/BlockingQueue.h \
    OSS/UTL/Exception.h \
    OSS/UTL/ServiceDaemon.h \
    OSS/UTL/ServiceOptions.h \
    OSS/Crypto/Crypto.h \
    OSS/UTL/Thread.h \
    OSS/UTL/Endian.h \
    OSS/UTL/PropertyMap.h \
    OSS/OSS.h \
    OSS/build.h \
    OSS/Persistent/BerkeleyDb.h \
    OSS/Persistent/RedisClient.h \
    OSS/UTL/Cache.h \
    OSS/UTL/TimedQueue.h \
    OSS/UTL/Application.h \
    OSS/UTL/IPCQueue.h \
    OSS/Exec/Process.h \
    OSS/Exec/Command.h \
    OSS/Exec/ManagedDaemon.h \
    OSS/Exec/ManagedDaemonRunner.h \
    OSS/Exec/pstream.h \
    OSS/Exec/stringtoargcargv.h \
    OSS/ABNF/ABNFSIPUserInfo.h \
    OSS/ABNF/ABNFFindMatch.h \
    OSS/ABNF/ABNFSIPRequestURI.h \
    OSS/ABNF/ABNFSIPIPV4Address.h \
    OSS/ABNF/ABNFSIPURIHeaders.h \
    OSS/ABNF/ABNFSIPHexPart.h \
    OSS/ABNF/ABNFSIPGenericParam.h \
    OSS/ABNF/ABNFSignalSlot.h \
    OSS/ABNF/ABNFSIPURIParameter.h \
    OSS/ABNF/ABNFSIPUtf8NonAscii.h \
    OSS/ABNF/ABNFSIPDomainLabel.h \
    OSS/ABNF/ABNFSIPCSeq.h \
    OSS/ABNF/ABNFSIPHex4.h \
    OSS/ABNF/ABNFSIPUserParam.h \
    OSS/ABNF/ABNFSIPToken.h \
    OSS/ABNF/ABNFSIPPort.h \
    OSS/ABNF/ABNFSIPFrom.h \
    OSS/ABNF/ABNFSIPStatusLine.h \
    OSS/ABNF/ABNFSIPURIHeader.h \
    OSS/ABNF/ABNFParser.h \
    OSS/ABNF/ABNFSIPURI.h \
    OSS/ABNF/ABNFSIPNetPath.h \
    OSS/ABNF/ABNFSIPAbsoluteURI.h \
    OSS/ABNF/ABNFSIPScheme.h \
    OSS/ABNF/ABNFSIPFromSpec.h \
    OSS/ABNF/ABNFWhileNot.h \
    OSS/ABNF/ABNFSIPSrvr.h \
    OSS/ABNF/ABNFSIPMethodParam.h \
    OSS/ABNF/ABNFSIPNameAddr.h \
    OSS/ABNF/ABNFSIPDisplayName.h \
    OSS/ABNF/ABNFSIPStatusCode.h \
    OSS/ABNF/ABNFSIPUser.h \
    OSS/ABNF/ABNFSIPURIParameters.h \
    OSS/ABNF/ABNFSIPReasonPhrase.h \
    OSS/ABNF/ABNFSIPQuotedPair.h \
    OSS/ABNF/ABNFSIPTextUtf8Trim.h \
    OSS/ABNF/ABNFSIPRegName.h \
    OSS/ABNF/ABNFSIPIPV6Address.h \
    OSS/ABNF/ABNFSIPRequestLine.h \
    OSS/ABNF/ABNFSIPOpaquePart.h \
    OSS/ABNF/ABNFSIPTopLabel.h \
    OSS/ABNF/ABNFSIPHostName.h \
    OSS/ABNF/ABNFLoopUntil.h \
    OSS/ABNF/ABNFSIPHexSeq.h \
    OSS/ABNF/ABNFSIPPathSegments.h \
    OSS/ABNF/ABNFSIPQuotedString.h \
    OSS/ABNF/ABNFSIPVersion.h \
    OSS/ABNF/ABNFSIPMethod.h \
    OSS/ABNF/ABNFLRSequence.h \
    OSS/ABNF/ABNFSIPContactParam.h \
    OSS/ABNF/ABNFSIPHost.h \
    OSS/ABNF/ABNFSIPPassword.h \
    OSS/ABNF/ABNFSIPSegment.h \
    OSS/ABNF/ABNFSIPHierPart.h \
    OSS/ABNF/ABNFBaseRule.h \
    OSS/ABNF/ABNFSIPGenericParams.h \
    OSS/ABNF/ABNFSIPHostPort.h \
    OSS/ABNF/ABNFStringLiteral.h \
    OSS/ABNF/ABNF.h \
    OSS/ABNF/ABNFAnyOf.h \
    OSS/ABNF/ABNFSIPRules.h \
    OSS/ABNF/ABNFSIPAuthority.h \
    OSS/ABNF/ABNFSIPTextUtf8Char.h \
    OSS/ABNF/ABNFSIPQdText.h \
    OSS/ABNF/ABNFSIPTransportParam.h \
    OSS/Crypto/BlockCipher.h \
    OSS/Crypto/FileEncryptor.h \
    OSS/Crypto/OSSCrypto.h \
    OSS/Persistent/ClassType.h \
    OSS/Persistent/DataType.h \
    OSS/Persistent/Persistent.h \
    OSS/Persistent/Reference.h \
    OSS/Persistent/KVLevelDB.h \
    OSS/Persistent/KeyValueStoreBase.h \
    OSS/Persistent/KeyValueStore.h \
    OSS/Persistent/RESTKeyValueStore.h \
    OSS/SDP/rfc4566.txt \
    OSS/SDP/SDP.h \
    OSS/SDP/SDPHeader.h \
    OSS/SDP/SDPHeaderList.h \
    OSS/SDP/SDPMedia.h \
    OSS/SDP/SDPSession.h \
    OSS/SDP/ICECandidate.h \
    OSS/SIP/Parser.h \
    OSS/SIP/ReSIPMessage.h \
    OSS/SIP/SIPAuthorization.h \
    OSS/SIP/SIPContact.h \
    OSS/SIP/SIPCSeq.h \
    OSS/SIP/SIPDigestAuth.h \
    OSS/SIP/SIPFrom.h \
    OSS/SIP/SIPHeaderTokens.h \
    OSS/SIP/SIPMessage.h \
    OSS/SIP/SIPParser.h \
    OSS/SIP/SIPParserException.h \
    OSS/SIP/SIPRequestLine.h \
    OSS/SIP/SIPRoute.h \
    OSS/SIP/SIPStatusLine.h \
    OSS/SIP/SIPURI.h \
    OSS/SIP/SIPVia.h \
    OSS/SIP/SIPXOR.h \
    OSS/SIP/SIP.h \
    OSS/SIP/SIPFSMDispatch.h \
    OSS/SIP/SIPStack.h \
    OSS/SIP/SIPListener.h \
    OSS/SIP/SIPFsm.h \
    OSS/SIP/SIPTransportSession.h \
    OSS/SIP/SIPTCPListener.h \
    OSS/SIP/SIPTransactionPool.h \
    OSS/SIP/SIPTransaction.h \
    OSS/SIP/SIPNict.h \
    OSS/SIP/SIPIst.h \
    OSS/SIP/SIPIct.h \
    OSS/SIP/SIPTLSListener.h \
    OSS/SIP/SIPUDPListener.h \
    OSS/SIP/SIPIstPool.h \
    OSS/SIP/SIPTransportService.h \
    OSS/SIP/SIPUDPConnectionClone.h \
    OSS/SIP/SIPNictPool.h \
    OSS/SIP/SIPIctPool.h \
    OSS/SIP/SIPNist.h \
    OSS/SIP/SIPTransactionTimers.h \
    OSS/SIP/SIPException.h \
    OSS/SIP/SIPUDPConnection.h \
    OSS/SIP/SIPNistPool.h \
    OSS/SIP/SIPReplaces.h \
    OSS/SIP/SIPStreamedConnection.h \
    OSS/SIP/SIPStreamedConnectionManager.h \
    OSS/SIP/UA/SIPUserAgent.h \
    OSS/SIP/UA/SIPEventLoop.h \
    OSS/SIP/UA/SIPRegistration.h \
    OSS/SIP/B2BUA/B2BUA.h \
    OSS/SIP/B2BUA/SIPB2BClientTransaction.h \
    OSS/SIP/B2BUA/SIPB2BHandler.h \
    OSS/SIP/B2BUA/SIPB2BScriptableHandler.h \
    OSS/SIP/B2BUA/SIPB2BTransaction.h \
    OSS/SIP/B2BUA/SIPB2BTransactionManager.h \
    OSS/SIP/B2BUA/SIPB2BContact.h \
    OSS/SIP/B2BUA/SIPB2BDialogData.h \
    OSS/SIP/B2BUA/SIPB2BDialogStateManager.h \
    OSS/SIP/B2BUA/SIPB2BUserAgentHandler.h \
    OSS/SIP/B2BUA/SIPB2BUserAgentHandlerList.h \
    OSS/SIP/B2BUA/SIPB2BRegisterAgent.h \
    OSS/SIP/EP/SIPEndpoint.h \
    OSS/SIP/EP/SIPEndpointRetransmitter.h \
    OSS/STUN/VovidaSTUN.inl \
    OSS/STUN/VovidaUDP.h \
    OSS/STUN/STUNMappedAddress.h \
    OSS/STUN/STUN.h \
    OSS/STUN/STUNClient.h \
    OSS/STUN/VovidaUDP.inl \
    OSS/STUN/STUNProto.h \
    OSS/STUN/VovidaSTUN.h \
    OSS/STUN/STUNServer.h \
    OSS/JS/JS.h \
    OSS/JS/JSBase.h \
    OSS/JS/JSSIPMessage.h \
    OSS/JSON/visitor.h \
    OSS/JSON/writer.inl \
    OSS/JSON/elements.h \
    OSS/JSON/test.cpp \
    OSS/JSON/reader.inl \
    OSS/JSON/elements.inl \
    OSS/JSON/Readme.txt \
    OSS/JSON/writer.h \
    OSS/JSON/reader.h \
    OSS/BSON/libbson.h \
    OSS/BSON/BSON.h \
    OSS/BSON/BSONValue.h \
    OSS/BSON/BSONObject.h \
    OSS/BSON/BSONString.h \
    OSS/BSON/BSONBool.h \
    OSS/BSON/BSONInt32.h \
    OSS/BSON/BSONInt64.h \
    OSS/BSON/BSONDouble.h \
    OSS/BSON/BSONDocument.h \
    OSS/BSON/BSONArray.h \
    OSS/RTP/RTPPacket.h \
    OSS/RTP/RTPPCAPReader.h \
    OSS/RTP/RTPProxy.h \
    OSS/RTP/RTPProxyManager.h \
    OSS/RTP/RTPProxyRecord.h \
    OSS/RTP/RTPProxySession.h \
    OSS/RTP/RTPProxyTuple.h \
    OSS/RTP/RTPResizer.h \
    OSS/RTP/RTPResizingQueue.h \
    OSS/Net/FirewallRule.h \
    OSS/Net/Firewall.h \
    OSS/Net/oss_carp.h \
    OSS/Net/Carp.h \
    OSS/Net/TurnServer.h \
    OSS/Net/HTTPServer.h \
    OSS/Net/AccessControl.h \
    OSS/Net/IPAddress.h \
    OSS/Net/TLSManager.h \
    OSS/Net/DNS.h \
    OSS/Net/Net.h \
    OSS/Net/FramedTcpListener.h \
    OSS/Net/FramedTcpClient.h \
    OSS/Net/FramedTcpConnection.h \
    OSS/UTL/AdaptiveDelay.h \
    OSS/UTL/CoreUtils.h \
    OSS/UTL/Logger.h \
    OSS/UTL/FastRandom.h \
    OSS/UTL/LogFile.h \
    OSS/websocketpp/common.hpp \
    OSS/websocketpp/connection.hpp \
    OSS/websocketpp/endpoint.hpp \
    OSS/websocketpp/network_utilities.hpp \
    OSS/websocketpp/shared_const_buffer.hpp \
    OSS/websocketpp/uri.hpp \
    OSS/websocketpp/websocket_frame.hpp \
    OSS/websocketpp/websocketpp.hpp \
    OSS/websocketpp/base64/base64.h \
    OSS/websocketpp/http/parser.hpp \
    OSS/websocketpp/http/constants.hpp \
    OSS/websocketpp/logger/logger.hpp \
    OSS/websocketpp/md5/md5.h \
    OSS/websocketpp/md5/md5.hpp \
    OSS/websocketpp/messages/control.hpp \
    OSS/websocketpp/messages/data.hpp \
    OSS/websocketpp/processors/hybi.hpp \
    OSS/websocketpp/processors/hybi_header.hpp \
    OSS/websocketpp/processors/hybi_legacy.hpp \
    OSS/websocketpp/processors/hybi_util.hpp \
    OSS/websocketpp/processors/processor.hpp \
    OSS/websocketpp/rng/blank_rng.hpp \
    OSS/websocketpp/rng/boost_rng.hpp \
    OSS/websocketpp/roles/client.hpp \
    OSS/websocketpp/roles/server.hpp \
    OSS/websocketpp/sha1/sha1.h \
    OSS/websocketpp/sockets/plain.hpp \
    OSS/websocketpp/sockets/socket_base.hpp \
    OSS/websocketpp/sockets/tls.hpp \
    OSS/websocketpp/utf8_validator/utf8_validator.hpp \
    OSS/SIP/SIPWebSocketConnection.h \
    OSS/SIP/SIPWebSocketConnectionManager.h \
    OSS/SIP/SIPWebSocketListener.h \
    OSS/EP/EndpointConnection.h \
    OSS/EP/EndpointListener.h \
    OSS/ZMQ/ZMQSocket.h


DISTCLEANFILES = Makefile.in
