
# preserve header timestamps to preserve incremental builds across
# projects
nobase_includeHEADERS_INSTALL = $(INSTALL) -D -p -c -m 644

nobase_include_HEADERS = OSS/OSS.h OSS/build.h
include OSS/ABNF/include.am
include OSS/BSON/include.am
include OSS/Crypto/include.am
include OSS/EP/include.am
include OSS/Exec/include.am
include OSS/JS/include.am
include OSS/JSON/include.am
include OSS/LMDB/include.am
include OSS/Net/include.am
include OSS/Persistent/include.am
include OSS/RAFT/include.am
include OSS/RTP/include.am
include OSS/SDP/include.am
include OSS/SIP/include.am
include OSS/STUN/include.am
include OSS/UTL/include.am
include OSS/wsinclude.am
include OSS/ZMQ/include.am
include OSS/Metrics/include.am

DISTCLEANFILES = Makefile.in
